--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="odd-element">Number 1 - I'm a class!</p>
+    <div id="unique-blue">Number 2 - I'm one ID.</div>
+    <p class="odd-element special-odd">Number 3 - I'm a class, but cooler!</p>
+    <div id="unique-green" class="special-odd">Number 4 - I'm another ID.</div>
+    <p class="odd-element">Number 5 - I'm a class!</p>
   </body>
 </html>
